--- a/djevents-frontend/package.json
+++ b/djevents-frontend/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "^0.4.1",
+    "date-fns": "^2.22.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "next": "14.2.13",
+    "qs": "^6.10.1",
+    "react-icons": "^4.2.0",
+    "react-map-gl": "^6.1.16",
+    "react-toastify": "^7.0.4"
   },
   "devDependencies": {
     "eslint": "^8",
